# Case-study-The-Self-Pruning-Neural-Network

./: .gitignore  README.md  Self_Pruning_NN_PRD.docx  dataset.py  debug_gates.py  full_run.py  main.py  model.py  pyproject.toml  report.md  test_implementation.py  train.py  train_single_file.py  utils.py
Build_process-3parts/: Part1_BuildGuide.docx  Part2_BuildGuide.docx  Part3_BuildGuide.docx
